force-app/main/default/objects/Quality_Assurance_QA__c/fields/Implementation_Call_Notes__c.field-meta.xml
<CustomField>
    <fullName>Implementation_Call_Notes__c</fullName>
    <inlineHelpText>Were notes added</inlineHelpText>
    <label>Implementation Call Notes</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>QA</valueSetName>
    </valueSet>
</CustomField>