force-app/main/default/objects/Quality_Assurance_QA__c/fields/Implementation_Notes_Added__c.field-meta.xml
<CustomField>
    <fullName>Implementation_Notes_Added__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Implementation Notes Added</label>
    <type>Checkbox</type>
</CustomField>