force-app/main/default/objects/Quality_Assurance_QA__c/fields/Implementation_Role__c.field-meta.xml
<CustomField>
    <fullName>Implementation_Role__c</fullName>
    <formula>IF( CONTAINS(Project_Task__r.Skill__c ,&quot;RM&quot;),&quot;RM&quot;,
IF( CONTAINS(Project_Task__r.Skill__c ,&quot;Document&quot;),&quot;Documents&quot;,
IF( CONTAINS(Project_Task__r.Skill__c ,&quot;Admin&quot;),&quot;Admin&quot;,&quot;&quot;
)
)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Implementation Role</label>
    <type>Text</type>
</CustomField>