force-app/main/default/objects/Quality_Assurance_QA__c/fields/Issue_Resolved__c.field-meta.xml
<CustomField>
    <fullName>Issue_Resolved__c</fullName>
    <inlineHelpText>Was the issue resolved to the best of the processor&apos;s ability?</inlineHelpText>
    <label>Issue Resolved</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>