force-app/main/default/objects/Quality_Assurance_QA__c/fields/Jargon__c.field-meta.xml
<CustomField>
    <fullName>Jargon__c</fullName>
    <description>Did user refrain from using company or industry jargon &amp; did user refrain from referencing internal departments?</description>
    <inlineHelpText>Did user refrain from using company or industry jargon &amp; did user refrain from referencing internal departments?</inlineHelpText>
    <label>Jargon</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>QA</valueSetName>
    </valueSet>
</CustomField>