force-app/main/default/objects/Quality_Assurance_QA__c/fields/Jargon_Score__c.field-meta.xml
<CustomField>
    <fullName>Jargon_Score__c</fullName>
    <description>10 Points for for refraining from using company/industry jargon or referencing internal departments, 0 points if not.</description>
    <formula>IF( ISPICKVAL(Jargon__c, &quot;Yes&quot;)||ISPICKVAL(Jargon__c, &quot;N/A&quot;),10,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>10 Points for for refraining from using company/industry jargon or referencing internal departments, 0 points if not.</inlineHelpText>
    <label>Jargon Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>