force-app/main/default/objects/Quality_Assurance_QA__c/fields/Knowledge__c.field-meta.xml
<CustomField>
    <fullName>Knowledge__c</fullName>
    <description>Gathered all appropriate information for the stated reason the customer called and any subsequent issues that may have arisen during the call. Asked probing questions. By using appropriate tools, resources and general awareness, resolved the client’s issue or provided specific and relevant information on when a resolution or an answer can be expected.</description>
    <inlineHelpText>Gathered all appropriate information for the stated reason the customer called and any subsequent issues that may have arisen during the call. Asked probing questions. By using appropriate tools, resources and general awareness, resolved the client’s issue or provided specific and relevant information on when a resolution or an answer can be expected.</inlineHelpText>
    <label>Knowledge</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
            </value>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>