force-app/main/default/objects/Quality_Assurance_QA__c/fields/Language__c.field-meta.xml
<CustomField>
    <fullName>Language__c</fullName>
    <description>Was professional and polite language used?</description>
    <inlineHelpText>Was professional and polite language used?</inlineHelpText>
    <label>Language</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>QA</valueSetName>
    </valueSet>
</CustomField>