force-app/main/default/objects/Quality_Assurance_QA__c/fields/Language_Score__c.field-meta.xml
<CustomField>
    <fullName>Language_Score__c</fullName>
    <description>10 points for using professional and polite language, 0 points if not.</description>
    <formula>IF( ISPICKVAL( Language__c, &quot;Yes&quot;)||ISPICKVAL( Language__c, &quot;N/A&quot;),10,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>10 points for using professional and polite language, 0 points if not.</inlineHelpText>
    <label>Language Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>