force-app/main/default/objects/Quality_Assurance_QA__c/fields/Messaging_Session__c.field-meta.xml
<CustomField>
    <fullName>Messaging_Session__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Messaging Session</label>
    <referenceTo>MessagingSession</referenceTo>
    <relationshipLabel>Quality Assurance (QA)</relationshipLabel>
    <relationshipName>Quality_Assurance_QA</relationshipName>
    <type>Lookup</type>
</CustomField>