force-app/main/default/objects/Quality_Assurance_QA__c/fields/Operations_QA_Score__c.field-meta.xml
<CustomField>
    <fullName>Operations_QA_Score__c</fullName>
    <formula>IF(OR(ISPICKVAL(  SOPs__c , &quot;Yes&quot;),ISPICKVAL( SOPs__c, &quot;N/A&quot;)),0.125,0)+
IF(OR(ISPICKVAL(   First_Touch_SLA__c  , &quot;Yes&quot;),ISPICKVAL(  First_Touch_SLA__c , &quot;N/A&quot;)),0.125,0)+
IF(OR(ISPICKVAL(  Refrained_From_Using_Jargon__c  , &quot;Yes&quot;),ISPICKVAL( Refrained_From_Using_Jargon__c , &quot;N/A&quot;)),0.125,0)+
IF(OR(ISPICKVAL(  Refrained_From_Internal_Team_References__c  , &quot;Yes&quot;),ISPICKVAL( Refrained_From_Internal_Team_References__c , &quot;N/A&quot;)),0.125,0)+
IF(OR(ISPICKVAL(  Language__c  , &quot;Yes&quot;),ISPICKVAL( Language__c , &quot;N/A&quot;)),0.125,0)+
IF(OR(ISPICKVAL(  Grammar__c   , &quot;Yes&quot;),ISPICKVAL( Grammar__c  , &quot;N/A&quot;)),0.125,0)+
IF(OR(ISPICKVAL(  Issue_Resolved__c   , &quot;Yes&quot;),ISPICKVAL( Issue_Resolved__c  , &quot;N/A&quot;)),0.125,0)+
IF(OR(ISPICKVAL(  Closure_SLA__c  , &quot;Yes&quot;),ISPICKVAL( Closure_SLA__c , &quot;N/A&quot;)),0.125,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Operations QA Score</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>