force-app/main/default/objects/Quality_Assurance_QA__c/fields/Outside_Item__c.field-meta.xml
<CustomField>
    <fullName>Outside_Item__c</fullName>
    <inlineHelpText>For running QA&apos;s on items outside of Salesforce</inlineHelpText>
    <label>Outside Item</label>
    <length>50</length>
    <type>Text</type>
</CustomField>