force-app/main/default/objects/Quality_Assurance_QA__c/fields/Outstanding_Items__c.field-meta.xml
<CustomField>
    <fullName>Outstanding_Items__c</fullName>
    <inlineHelpText>Were all outstanding items addressed with Client</inlineHelpText>
    <label>Outstanding Items</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>QA</valueSetName>
    </valueSet>
</CustomField>