force-app/main/default/objects/Quality_Assurance_QA__c/fields/Ownership__c.field-meta.xml
<CustomField>
    <fullName>Ownership__c</fullName>
    <description>Took ownership of the client’s issue. Did not “pass the buck” or state “that’s not my job/department.” We are one Ubiquity. Transferred call when appropriate. Followed up and tracked the issue to ensure resolution.</description>
    <inlineHelpText>Took ownership of the client’s issue. Did not “pass the buck” or state “that’s not my job/department.” We are one Ubiquity. Transferred call when appropriate. Followed up and tracked the issue to ensure resolution.</inlineHelpText>
    <label>Ownership</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
            </value>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>