force-app/main/default/objects/Quality_Assurance_QA__c/fields/Phone__c.field-meta.xml
<CustomField>
    <fullName>Phone__c</fullName>
    <label>Phone</label>
    <type>TextArea</type>
</CustomField>