force-app/main/default/objects/Quality_Assurance_QA__c/fields/Plan_Provisions__c.field-meta.xml
<CustomField>
    <fullName>Plan_Provisions__c</fullName>
    <inlineHelpText>Were Plan Provisions updated in Salesforce</inlineHelpText>
    <label>Plan Provisions</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>QA</valueSetName>
    </valueSet>
</CustomField>