force-app/main/default/objects/Quality_Assurance_QA__c/fields/Project_Task__c.field-meta.xml
<CustomField>
    <fullName>Project_Task__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Identifies the imps project task being QA&apos;d</description>
    <label>Project Task</label>
    <referenceTo>Project_Task__c</referenceTo>
    <relationshipLabel>Quality Assurance (QA)</relationshipLabel>
    <relationshipName>Quality_Assurance_QA</relationshipName>
    <type>Lookup</type>
</CustomField>