force-app/main/default/objects/Quality_Assurance_QA__c/fields/Provided_Accurate_Guidance__c.field-meta.xml
<CustomField>
    <fullName>Provided_Accurate_Guidance__c</fullName>
    <label>Provided Accurate Guidance</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>QA</valueSetName>
    </valueSet>
</CustomField>