force-app/main/default/objects/Quality_Assurance_QA__c/fields/Provided_Accurate_Guidance_Score__c.field-meta.xml
<CustomField>
    <fullName>Provided_Accurate_Guidance_Score__c</fullName>
    <formula>IF( ISPICKVAL(  Provided_Accurate_Guidance__c , &quot;No&quot;),0,20)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Provided Accurate Guidance Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>