force-app/main/default/objects/Quality_Assurance_QA__c/fields/QA_Completion__c.field-meta.xml
<CustomField>
    <fullName>QA_Completion__c</fullName>
    <description>Notates whether reviewer has completed the QA.</description>
    <formula>IF(ISNULL( Reviewer_Score__c )=TRUE, &quot;Incomplete&quot;,&quot;Complete&quot;)</formula>
    <inlineHelpText>Notates whether reviewer has completed the QA.</inlineHelpText>
    <label>QA Completion</label>
    <type>Text</type>
</CustomField>