force-app/main/default/objects/Quality_Assurance_QA__c/fields/QA_Design_Version__c.field-meta.xml
<CustomField>
    <fullName>QA_Design_Version__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>QA Design</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>QA_Design_Version__c.isActive__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <filterItems>
            <field>QA_Design_Version__c.Department__c</field>
            <operation>equals</operation>
            <valueField>$Source.Department_Dyn__c</valueField>
        </filterItems>
        <filterItems>
            <field>QA_Design_Version__c.QA_Type__c</field>
            <operation>equals</operation>
            <valueField>$Source.QA_Type_Dyn__c</valueField>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>QA_Design_Version__c</referenceTo>
    <relationshipLabel>Quality Assurance (QA)</relationshipLabel>
    <relationshipName>Quality_Assurance_QA</relationshipName>
    <type>Lookup</type>
</CustomField>