force-app/main/default/objects/Quality_Assurance_QA__c/fields/QA_Type__c.field-meta.xml
<CustomField>
    <fullName>QA_Type__c</fullName>
    <description>Type of QA being conducted.</description>
    <inlineHelpText>Type of QA being conducted.</inlineHelpText>
    <label>QA Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Case</fullName>
            </value>
            <value>
                <fullName>Implementation</fullName>
            </value>
            <value>
                <fullName>Phone Call</fullName>
            </value>
            <value>
                <fullName>Operations Case</fullName>
            </value>
            <value>
                <fullName>CE Case</fullName>
            </value>
            <value>
                <fullName>BI</fullName>
            </value>
            <value>
                <fullName>PRKS</fullName>
            </value>
            <value>
                <fullName>Accounting</fullName>
            </value>
            <value>
                <fullName>Chat</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>