force-app/main/default/objects/Quality_Assurance_QA__c/fields/QA_Type_Dyn__c.field-meta.xml
<CustomField>
    <fullName>QA_Type_Dyn__c</fullName>
    <description>New version of field to support dynamic QA forms</description>
    <inlineHelpText>Required for QA Design</inlineHelpText>
    <label>QA Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>QA_Types</valueSetName>
    </valueSet>
</CustomField>