force-app/main/default/objects/Quality_Assurance_QA__c/fields/Questioning_Skills__c.field-meta.xml
<CustomField>
    <fullName>Questioning_Skills__c</fullName>
    <description>Were effective questioning skills used?</description>
    <inlineHelpText>Were effective questioning skills used?</inlineHelpText>
    <label>Questioning Skills</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>QA</valueSetName>
    </valueSet>
</CustomField>