force-app/main/default/objects/Quality_Assurance_QA__c/fields/Questioning_Skills_Score__c.field-meta.xml
<CustomField>
    <fullName>Questioning_Skills_Score__c</fullName>
    <description>10 Points for effective questioning skills were used, 0 points if not.</description>
    <formula>IF( ISPICKVAL( Questioning_Skills__c , &quot;Yes&quot;)||ISPICKVAL( Questioning_Skills__c , &quot;N/A&quot;),10,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>10 Points for effective questioning skills were used, 0 points if not.</inlineHelpText>
    <label>Questioning Skills Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>