force-app/main/default/objects/Quality_Assurance_QA__c/fields/Refrained_From_Internal_Team_References__c.field-meta.xml
<CustomField>
    <fullName>Refrained_From_Internal_Team_References__c</fullName>
    <inlineHelpText>(external parties only)</inlineHelpText>
    <label>Refrained From Internal Team References</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>