force-app/main/default/objects/Quality_Assurance_QA__c/fields/Refrained_From_Using_Jargon__c.field-meta.xml
<CustomField>
    <fullName>Refrained_From_Using_Jargon__c</fullName>
    <inlineHelpText>Company or industry jargon (external parties only)</inlineHelpText>
    <label>Refrained From Using Jargon</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>