force-app/main/default/objects/Quality_Assurance_QA__c/fields/Regularly_Followed_up_with_client__c.field-meta.xml
<CustomField>
    <fullName>Regularly_Followed_up_with_client__c</fullName>
    <description>Did user follow up with client as needed per guidelines?</description>
    <inlineHelpText>Did user follow up with client as needed per guidelines?</inlineHelpText>
    <label>Regularly Followed up with client?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>QA</valueSetName>
    </valueSet>
</CustomField>