force-app/main/default/objects/Quality_Assurance_QA__c/fields/Regularly_Followed_up_with_client_Score__c.field-meta.xml
<CustomField>
    <fullName>Regularly_Followed_up_with_client_Score__c</fullName>
    <formula>IF( ISPICKVAL(  Regularly_Followed_up_with_client__c , &quot;No&quot;),0,10)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Regularly Followed up with client Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>