force-app/main/default/objects/Quality_Assurance_QA__c/fields/Related_Records_Linked__c.field-meta.xml
<CustomField>
    <fullName>Related_Records_Linked__c</fullName>
    <description>Did the representative link the relevant category and sub-category, account name, plan name, and contact name in the case?</description>
    <inlineHelpText>Did the representative link the relevant category and sub-category, account name, plan name, and contact name in the case?</inlineHelpText>
    <label>Related Records Linked</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>QA</valueSetName>
    </valueSet>
</CustomField>