force-app/main/default/objects/Quality_Assurance_QA__c/fields/Related_Records_Linked_Score__c.field-meta.xml
<CustomField>
    <fullName>Related_Records_Linked_Score__c</fullName>
    <formula>IF( ISPICKVAL(  Related_Records_Linked__c , &quot;No&quot;),0, 10)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Related Records Linked Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>