force-app/main/default/objects/Quality_Assurance_QA__c/fields/Request_Completed__c.field-meta.xml
<CustomField>
    <fullName>Request_Completed__c</fullName>
    <description>Was request accurately completed?</description>
    <inlineHelpText>Was request accurately completed?</inlineHelpText>
    <label>Request Completed</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>QA</valueSetName>
    </valueSet>
</CustomField>