force-app/main/default/objects/Quality_Assurance_QA__c/fields/Request_Completed_Score__c.field-meta.xml
<CustomField>
    <fullName>Request_Completed_Score__c</fullName>
    <description>10 Points if request completed, 0 points if not.</description>
    <formula>IF( ISPICKVAL( Request_Completed__c, &quot;Yes&quot;)||ISPICKVAL( Request_Completed__c, &quot;N/A&quot;),10,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>10 Points if request completed, 0 points if not.</inlineHelpText>
    <label>Request Completed Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>