force-app/main/default/objects/Quality_Assurance_QA__c/fields/Request_Reason__c.field-meta.xml
<CustomField>
    <fullName>Request_Reason__c</fullName>
    <inlineHelpText>What is the inquiry regarding?</inlineHelpText>
    <label>Request Reason</label>
    <type>TextArea</type>
</CustomField>