force-app/main/default/objects/Quality_Assurance_QA__c/fields/Reviewer_Score__c.field-meta.xml
<CustomField>
    <fullName>Reviewer_Score__c</fullName>
    <description>Score of 0 - 100 given by Reviewer. Should match calculated score unless Manager is overriding score.</description>
    <inlineHelpText>Score of 0 - 100 given by Reviewer. Should match calculated score unless Manager is overriding score.  By completing this, I am signing that this score is accurate.</inlineHelpText>
    <label>Reviewer Score</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>