force-app/main/default/objects/Quality_Assurance_QA__c/fields/Scheduling_Next_Stage_Calls__c.field-meta.xml
<CustomField>
    <fullName>Scheduling_Next_Stage_Calls__c</fullName>
    <inlineHelpText>Did the RM schedule next stage call (Census &amp; Funding)</inlineHelpText>
    <label>Scheduling Next Stage Calls</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>QA</valueSetName>
    </valueSet>
</CustomField>