force-app/main/default/objects/Quality_Assurance_QA__c/fields/SLA_Score__c.field-meta.xml
<CustomField>
    <fullName>SLA_Score__c</fullName>
    <description>If both SLA&apos;s present both = 5 points each. If only first touch needed on case then it = 10 points.</description>
    <formula>IF(  ISPICKVAL(First_Touch_SLA__c, &quot;Yes&quot;) &amp;&amp; ISPICKVAL(Closure_SLA__c , &quot;Yes&quot;), 10,
IF(  ISPICKVAL(First_Touch_SLA__c, &quot;Yes&quot;) &amp;&amp;  ISPICKVAL(Closure_SLA__c, &quot;No&quot;),5,
IF(  ISPICKVAL(First_Touch_SLA__c, &quot;No&quot;) &amp;&amp;  ISPICKVAL(Closure_SLA__c, &quot;Yes&quot;),5,
IF(  ISPICKVAL(First_Touch_SLA__c, &quot;Yes&quot;) &amp;&amp;  ISPICKVAL(Closure_SLA__c, &quot;N/A&quot;),10,0))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>If both SLA&apos;s present both = 5 points each. If only first touch needed on case then it = 10 points.</inlineHelpText>
    <label>SLA Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>