force-app/main/default/objects/Quality_Assurance_QA__c/fields/SOP_Followed__c.field-meta.xml
<CustomField>
    <fullName>SOP_Followed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SOP Followed</label>
    <type>Checkbox</type>
</CustomField>