force-app/main/default/objects/Quality_Assurance_QA__c/fields/SOP_Score__c.field-meta.xml
<CustomField>
    <fullName>SOP_Score__c</fullName>
    <description>20 Points for SOP(s) followed, 0 points if not.</description>
    <formula>IF( ISPICKVAL(SOPs__c, &quot;Yes&quot;)||ISPICKVAL(SOPs__c, &quot;N/A&quot;),20,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>20 Points for SOP(s) followed, 0 points if not.</inlineHelpText>
    <label>SOP Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>