force-app/main/default/objects/Quality_Assurance_QA__c/fields/SOPs__c.field-meta.xml
<CustomField>
    <fullName>SOPs__c</fullName>
    <description>Have appropriate SOP&apos;s been followed?</description>
    <inlineHelpText>Have appropriate SOP&apos;s been followed?</inlineHelpText>
    <label>SOP(s)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>QA</valueSetName>
    </valueSet>
</CustomField>