force-app/main/default/objects/Quality_Assurance_QA__c/fields/Successful_Send_Off__c.field-meta.xml
<CustomField>
    <fullName>Successful_Send_Off__c</fullName>
    <description>Did the representative use a proper closing, i.e., offered additional assistance, thanked them for calling (where applicable)?</description>
    <inlineHelpText>Did the representative use a proper closing, i.e., offered additional assistance, thanked them for calling (where applicable)?</inlineHelpText>
    <label>Successful Send-Off</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>QA</valueSetName>
    </valueSet>
</CustomField>