force-app/main/default/objects/Quality_Assurance_QA__c/fields/Successful_Send_Off_Score__c.field-meta.xml
<CustomField>
    <fullName>Successful_Send_Off_Score__c</fullName>
    <formula>IF( ISPICKVAL( Successful_Send_Off__c , &quot;No&quot;),0,10)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Successful Send-Off Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>