force-app/main/default/objects/Quality_Assurance_QA__c/fields/Successful_Transfer_to_CST_Payroll__c.field-meta.xml
<CustomField>
    <fullName>Successful_Transfer_to_CST_Payroll__c</fullName>
    <inlineHelpText>Was the correct template sent to the client for proper transfer to next team?</inlineHelpText>
    <label>Successful Transfer to CST/Payroll?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>