force-app/main/default/objects/Quality_Assurance_QA__c/fields/Successful_Transfer_to_CST_Payroll_Score__c.field-meta.xml
<CustomField>
    <fullName>Successful_Transfer_to_CST_Payroll_Score__c</fullName>
    <formula>IF( ISPICKVAL(  Successful_Transfer_to_CST_Payroll__c , &quot;No&quot;),0,10)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Successful Transfer to CST/Payroll Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>