force-app/main/default/objects/Quality_Assurance_QA__c/fields/Timely_Resolution__c.field-meta.xml
<CustomField>
    <fullName>Timely_Resolution__c</fullName>
    <description>Proactively and efficiently controlled the flow of the call to get to the quickest resolution.</description>
    <inlineHelpText>Proactively and efficiently controlled the flow of the call to get to the quickest resolution.</inlineHelpText>
    <label>Timely Resolution</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
            </value>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>