force-app/main/default/objects/Quality_Assurance_QA__c/fields/Value_Added__c.field-meta.xml
<CustomField>
    <fullName>Value_Added__c</fullName>
    <description>Did user proactively add value to the reply?</description>
    <inlineHelpText>Where applicable, did the specialist provide helpful guides, website navigation tips, full details to prevent callback/additional inquiries?</inlineHelpText>
    <label>Value Added</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>QA</valueSetName>
    </valueSet>
</CustomField>