force-app/main/default/objects/Quality_Assurance_QA__c/fields/Value_Added_Score__c.field-meta.xml
<CustomField>
    <fullName>Value_Added_Score__c</fullName>
    <description>5 Points if value added in reply, 0 points if not.</description>
    <formula>IF( ISPICKVAL( Value_Added__c, &quot;Yes&quot;)||ISPICKVAL( Value_Added__c, &quot;N/A&quot;),5,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>5 Points if value added in reply, 0 points if not.</inlineHelpText>
    <label>Value Added Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>