force-app/main/default/objects/Quality_Assurance_QA__c/fields/X1_Courtesy_Concern__c.field-meta.xml
<CustomField>
    <fullName>X1_Courtesy_Concern__c</fullName>
    <description>Built a relationship with the client, maintained a positive tone and was polite. Showed compassion and empathy for the client’s situation. Acknowledged the client’s issue and treated it with importance.</description>
    <inlineHelpText>Built a relationship with the client, maintained a positive tone and was polite. Showed compassion and empathy for the client’s situation. Acknowledged the client’s issue and treated it with importance.</inlineHelpText>
    <label>Courtesy &amp; Concern</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
            </value>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>