force-app/main/default/objects/Quality_Assurance_QA__c/recordTypes/Call_QA_CST_Saver.recordType-meta.xml
<RecordType>
    <fullName>Call_QA_CST_Saver</fullName>
    <active>true</active>
    <label>Call QA - CST/Saver</label>
</RecordType>