force-app/main/default/objects/Quality_Assurance_QA__c/recordTypes/Case_QA.recordType-meta.xml
<RecordType>
    <fullName>Case_QA</fullName>
    <active>true</active>
    <description>Used for QA on Cases</description>
    <label>Case QA</label>
</RecordType>