force-app/main/default/objects/Quality_Assurance_QA__c/recordTypes/Dynamic_QA_Form.recordType-meta.xml
<RecordType>
    <fullName>Dynamic_QA_Form</fullName>
    <active>true</active>
    <label>Dynamic QA Form</label>
</RecordType>