force-app/main/default/objects/Quality_Assurance_QA__c/recordTypes/Implementation_QA.recordType-meta.xml
<RecordType>
    <fullName>Implementation_QA</fullName>
    <active>true</active>
    <description>Used for QA on Implementations</description>
    <label>Implementation QA</label>
</RecordType>