force-app/main/default/objects/Quality_Assurance_QA__c/validationRules/QA_Explain_Reviewer_Score_Diff.validationRule-meta.xml
<ValidationRule>
    <fullName>QA_Explain_Reviewer_Score_Diff</fullName>
    <active>true</active>
    <errorConditionFormula>QA_Score__c &lt;&gt; Reviewer_Score__c 
&amp;&amp;
NOT(ISBLANK(Reviewer_Score__c))
&amp;&amp;
ISBLANK(Comments__c)
&amp;&amp;
QA_Score__c &gt; 0</errorConditionFormula>
    <errorMessage>Reviewer Score does not match QA Score.  Please leave a comment to explain why</errorMessage>
</ValidationRule>